# votee

./: .env.example  .gitignore  README.md  docker-compose.yml  dockge.stack.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py  models.py  redis_client.py  schemas.py  security.py
backend/app/routers/: admin.py  analysis.py  auth.py  avatars.py  profiles.py  votes.py
backend/app/services/: analysis.py  auth.py  storage.py  voting.py
backend/tests/: conftest.py  test_admin_and_analysis.py  test_auth_and_profiles.py  test_auth_service.py  test_avatars_and_votes.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/e2e/: votee-smoke.spec.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: AppShell.tsx  AvatarCard.tsx  SectionCard.tsx
frontend/src/hooks/: useSession.ts
frontend/src/pages/: AdminPage.test.tsx  AdminPage.tsx  FeedPage.test.tsx  FeedPage.tsx  LoginPage.test.tsx  LoginPage.tsx  MePage.tsx  ProfilePage.tsx
frontend/src/test/: render.tsx
